// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v1;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "com/digitalasset/canton/protocol/v0/common.proto";
import "com/digitalasset/canton/protocol/v0/participant_transaction.proto";
import "com/digitalasset/canton/protocol/v0/topology.proto";
import "com/digitalasset/canton/protocol/v1/common.proto";
import "com/digitalasset/canton/protocol/v1/merkle.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

// Messages sent by a participant as part of the transaction protocol

// Changes from v0: ActionDescription.
message ActionDescription {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  oneof description {
    v0.ActionDescription.CreateActionDescription create = 1;
    ExerciseActionDescription exercise = 2;
    v0.ActionDescription.FetchActionDescription fetch = 3;
    v0.ActionDescription.LookupByKeyActionDescription lookup_by_key = 4;
  }

  // Changes from v0:
  //   added: interface_id
  message ExerciseActionDescription {
    string input_contract_id = 1;
    string choice = 2;
    bytes chosen_value = 3;
    repeated string actors = 4;
    bool by_key = 5;
    bytes node_seed = 6;
    string version = 7;
    bool failed = 8;
    optional string interface_id = 9;
  }

  // Changes from v0: Updated GlobalKey
  message LookupByKeyActionDescription {
    v1.GlobalKey key = 1;
  }

  // Changes from v0: Add templateId
  message FetchActionDescription {
    string input_contract_id = 1;
    repeated string actors = 2;
    bool by_key = 3;
    string version = 4;
    optional string template_id = 5;
  }
}

message ViewNode {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  BlindableNode view_common_data = 1;
  BlindableNode view_participant_data = 2;
  MerkleSeq subviews = 3; // changed type to MerkleSeq in v1
}

message ViewCommonData {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  com.digitalasset.canton.crypto.v0.Salt salt = 1;
  repeated Informee informees = 2;
  int32 threshold = 3;
}

message Informee {
  string party = 1;
  int32 weight = 2; // optional: only set if party is confirming
  com.digitalasset.canton.protocol.v0.TrustLevel required_trust_level = 3;
}

// EncryptedViewMessage

message EncryptedViewMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  bytes view_tree = 1;

  // The symmetric encryption scheme used to encrypt the view tree
  com.digitalasset.canton.crypto.v0.SymmetricKeyScheme encryption_scheme = 2;

  com.digitalasset.canton.crypto.v0.Signature submitter_participant_signature = 3; // optional
  bytes view_hash = 4;
  repeated ParticipantRandomnessLookup randomness = 5;
  string domain_id = 6;
  v0.ViewType view_type = 7;
}

message ParticipantRandomnessLookup {
  // An encrypted random bytestring. After decryption, used in HKDF to derive the encryption keys for the view and
  // its subviews
  bytes randomness = 1;

  // The fingerprint of the public key that was used to encrypt the randomness for the participant
  string fingerprint = 2;
}

message ViewParticipantMessage {
  // Placeholder as the protobuf format in v1 is identical to v0.
  // To avoid copy-pasting the serializer/deserializers, the Scala code reuses the v0 message.
  option deprecated = true;
}

// InformeeMessage

message InformeeMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  FullInformeeTree full_informee_tree = 1;
  int32 protocol_version = 2; // added in v1
}

message LightTransactionViewTree {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  GenTransactionTree tree = 1;
  repeated bytes subview_hashes = 2; // added in v1
}

message FullInformeeTree {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  GenTransactionTree tree = 1;
}

// Compared to v0: contract changed type from v0.SerializableContract to v1.SerializableContract
message CreatedContract {
  v1.SerializableContract contract = 1;
  bool consumed_in_core = 2;
  bool rolled_back = 3;
}

// Compared to v0: contract changed type from v0.SerializableContract to v1.SerializableContract
message InputContract {
  v1.SerializableContract contract = 1;
  bool consumed = 2;
}

// Compared to v0: added max_sequencing_time
message SubmitterMetadata {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  com.digitalasset.canton.crypto.v0.Salt salt = 1;
  repeated string act_as = 2;
  string application_id = 3;
  string command_id = 4;
  string submitter_participant = 5;
  string submission_id = 6; // optional; absent if not specified by submitter
  v0.DeduplicationPeriod dedup_period = 7;
  google.protobuf.Timestamp max_sequencing_time = 8;
}

// Compared to v0: updated GlobalKey
message ResolvedKey {
  v1.GlobalKey key = 1;
  oneof resolution {
    string contract_id = 2; // the key resolves to a contract
    v0.ViewParticipantData.FreeKey free = 3; // the key is free and these are the maintainers
  }
}
